Implementada la primera parte del date